--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,6 @@
  
 # dependencies 
 node_modules/*
- 
-# testing 
-coverage 
- 
-# production 
-build 
- 
-# misc 
-.DS_Store 
-.env 
-npm-debug.log 
+
+#IDE
+.idea
